feat(StatusBoard): add status board

--- a/resources/css/filament/admin/theme.css
+++ b/resources/css/filament/admin/theme.css
@@ -2,3 +2,6 @@
 
 @source '../../../../app/Filament/**/*';
 @source '../../../../resources/views/filament/**/*';
+
+/* Flowforge */
+@source "../../../../vendor/relaticle/flowforge/resources/views/**/*.blade.php";
