--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,4 +8,25 @@
 @theme {
     --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
         'Segoe UI Symbol', 'Noto Color Emoji';
+
+    --color-coffee-700: #613C2A;
+    --color-coffee-400: #F2EFE8;
+}
+
+.header {
+    width: calc(100% - 100px);
+    border-radius: 0 0 30px 30px;
+    position: relative;
+}
+
+.corner {
+    position: absolute;
+}
+
+.corner-left {
+    left: -70px;
+}
+
+.corner-right {
+    right: -70px;
 }
