--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -41,6 +41,11 @@
   border-radius: 0 0 30px 30px;
 }
 
+.footer {
+  width: calc(100% - 100px);
+  border-radius: 30px 30px 0 0;
+}
+
 .corner {
   position: absolute;
 }
